correct alignment

--- a/css/blocks/service.css
+++ b/css/blocks/service.css
@@ -30,7 +30,8 @@
 
 .modal {
     padding-top: 41px;
-    margin-left: 241px;
+    margin-left: 243px;
+    display: flex;
 }
 
 .modal-heading {
@@ -62,9 +63,8 @@
     margin: 20px auto 20px auto;
     width: 500px;
     height: 60px;
-    background:#fff;
-    box-shadow:0 4px 15px rgba(0,0,0,.2);
-    border:none;
+    border: 1px solid #CCCCCC;
+    border-radius: 4px;
     font-size:18px;
     text-align: left;
     padding:0 20px;
